--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.19.3
   provider: ^5.0.0
+  flutter_switch: ^0.3.0
 
 dev_dependencies:
   flutter_test:
