--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_switch: ^0.3.1
   intl: ^0.17.0
   dio: ^4.0.0
+  enum_to_string: ^2.0.1
 
 dev_dependencies:
   flutter_test:
