--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,14 @@ dependencies:
   intl: ^0.17.0
   dio: ^4.0.0
   enum_to_string: ^2.0.1
+  mobx: ^2.0.1
+  flutter_mobx: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mobx_codegen: ^2.0.1+3
+  build_runner: ^2.0.4
 
 flutter:
   uses-material-design: true
