--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   equatable: ^2.0.2
   mobx: ^2.0.1
   flutter_mobx: ^2.0.0
+  redux: ^5.0.0
+  flutter_redux: ^0.8.2
 
 dev_dependencies:
   flutter_test:
