--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   flutter_mobx: ^2.0.0
   redux: ^5.0.0
   flutter_redux: ^0.8.2
+  mwwm: ^2.0.0
+  relation: ^3.1.0
 
 dev_dependencies:
   flutter_test:
