--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   enum_to_string: ^2.0.1
   flutter_bloc: ^7.0.1
   equatable: ^2.0.2
+  animated_rotation: ^2.0.0
 
 dev_dependencies:
   flutter_test:
