--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dev_dependencies:
     sdk: flutter
   mobx_codegen: ^2.0.1+3
   build_runner: ^2.0.4
+  flutter_lints: ^1.0.4
 
 flutter:
   uses-material-design: true
