--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,28 +6,26 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
-  flutter_svg: ^0.21.0+1
+  cupertino_icons: ^1.0.3
+  flutter_svg: ^0.22.0
   provider: ^5.0.0
-  flutter_switch: ^0.3.1
+  flutter_switch: ^0.3.2
   intl: ^0.17.0
   dio: ^4.0.0
   enum_to_string: ^2.0.1
-  flutter_bloc: ^7.0.1
-  equatable: ^2.0.2
+  flutter_bloc: ^7.1.0
+  equatable: ^2.0.3
   animated_rotation: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mobx_codegen: ^2.0.1+3
-  build_runner: ^2.0.4
   flutter_lints: ^1.0.4
 
 flutter:
