--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   enum_to_string: ^2.0.1
   flutter_bloc: ^7.1.0
   equatable: ^2.0.3
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
