--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,11 +22,17 @@ dependencies:
   flutter_bloc: ^7.1.0
   equatable: ^2.0.3
   shared_preferences: ^2.0.6
+  moor: ^4.5.0
+  path_provider: ^2.0.2
+  sqlite3_flutter_libs: ^0.5.0
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.4
+  moor_generator: ^4.4.1
+  build_runner: ^2.1.1
 
 flutter:
   uses-material-design: true
