--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   path_provider: ^2.0.2
   sqlite3_flutter_libs: ^0.5.0
   path: ^1.8.0
+  image_picker: ^0.8.4
 
 dev_dependencies:
   flutter_test:
