--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   image_picker: ^0.8.4
   yandex_mapkit: ^1.1.1
   geolocator: ^7.6.0
+  mime_type: ^1.0.0
 
 dev_dependencies:
   flutter_test:
