--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   yandex_mapkit: ^1.1.1
   geolocator: ^7.6.0
   mime_type: ^1.0.0
+  map_launcher: ^2.1.1
 
 dev_dependencies:
   flutter_test:
